Started work on SAT chapter and tidied up LTL definitions

--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -10,9 +10,9 @@ One of the most fundamental forms of logic is propositional logic which contains
 
 
 \begin{mydef}[Propositional Formulae]
-Given a set of propositional variables $V$ we inductively define the set of propositional formulae $AP$ as follows:
+Given a set of atomic proposition names $AP$ we inductively define the set of propositional formulae $Prop$ as follows:
 \begin{itemize}
-\item If $s$ is in the set of symbols $s \in V$ then $s \in AP$.
+\item If $a$ is an atomic proposition $a \in AP$ then $a \in Prop$.
 
 \item if $p_1$ is a propositional formula $p_1 \in AP$ then $\neg p_1 \in AP$.
 
