--- a/Introduction.tex
+++ b/Introduction.tex
@@ -5,9 +5,22 @@
 
 This thesis is concerned with the application of formal methods within the Railway Domain. Firstly we present a new approach to develop verified SAT solving algorithms and which have been applied the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise the European Rail Traffic Management System (ERTMS) and apply a model checker to verify the systems safety.
 
+A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly.The answer to this question is more elusive than it may seem initially. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manor, due to the fact that most modern systems have a large number of inputs and testing each possible combination is not feasible.
+
+Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and formal specification which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manor. These formal methods however do not make testing redundant, for example, would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified. 
+
+The Railway Verification Group at the Computer Science Department of Swansea University has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. 
+
+\textbf{I should write about some famous examples of systems development gone wrong i.e. ariane rocket, chip and pin. I should also include some reference to the software crisis of the 60s.} 
+
+One 
+
 
 \section{Aim}
 We have 2 sets of aims. The first set of aims is in regard to the development of verified SAT solving algorithms and their application to the verification of solid state railway interlocking programs: 
+
+
+\medskip
 
 \begin{itemize}
 
