--- a/VerifyingSSI.tex
+++ b/VerifyingSSI.tex
@@ -1,1 +1,1 @@
-\chapter{The Application and Comparison of X-SAT to the Verification of Interlockings}
+\chapter{The Application and Comparison of X-SAT on Benchmark Problems}
