--- a/lit.bib
+++ b/lit.bib
@@ -548,7 +548,7 @@
 
 @ARTICLE{DPLL,
   author = {Davis, M. and Logemann, G. and Loveland, D.},
-  title = {A {M}achine {P}rogram for {T}heorem-{P}roving},
+  title = {A Machine Program for Theorem-Proving},
   journal = {Commun. ACM},
   year = {1962},
   volume = {5},
@@ -1435,8 +1435,7 @@
 
 @INPROCEEDINGS{LZ01,
   author = {Zhang, L. and Madigan, C. and Moskewics, M. H. and Malik, S.},
-  title = {Efficient {C}onflict {D}riven {L}earning in a {B}oolean {S}atisfiability
-	{S}olver},
+  title = {Efficient Conflict Driven Learning in a Boolean Satisfiability Solver},
   booktitle = {2001 International Conference on Computer Aided Design},
   year = {2001},
   pages = {279},
