tidied up LTL semantics

--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -126,15 +126,20 @@ $$K,\pi \models_{LTL} \phi \vee \psi \leftrightarrow K,\pi \models_{LTL} \phi \ 
 
 \begin{center}
 \begin{tabular}{l | l  c  l}
-1. & $M, s \models p$  & $\leftrightarrow$ & $p \in L(s)$ \\
-2. & $M, s \models \neg f_1 $ & $\leftrightarrow$ & $M,s \not\models f_1$ \\
-3. & $M, s \models f_1 \vee f_2$ & $\leftrightarrow$ & $M,s \models f_1$ or $M,s \models f_2$ \\
-4. & $M, s \models f_1 \wedge f_2$ & $\leftrightarrow$ & $M,s \models f_1$ and $M,s \models f_2$ \\ 
-2. & $M,\pi \models f_1$ & $\leftrightarrow$ & $M,\pi(0) \models f_1$ \\
-3. & $M,\pi \models p$ & $\leftrightarrow$ & $blah$
+1. & $M, s \models p$  & $\Leftrightarrow$ & $p \in L(s)$ \\
+2. & $M, s \models \neg f_1 $ & $\Leftrightarrow$ & $M,s \not\models f_1$ \\
+3. & $M, s \models f_1 \vee f_2$ & $\Leftrightarrow$ & $M,s \models f_1$ or $M,s \models f_2$ \\
+4. & $M, s \models f_1 \wedge f_2$ & $\Leftrightarrow$ & $M,s \models f_1$ and $M,s \models f_2$ \\ 
+5. & $M,\pi \models f_1$ & $\Leftrightarrow$ & $M,\pi(0) \models f_1$ \\
+6. & $M,\pi \models \mathbf{X} g_1$ & $\Leftrightarrow$ & $M, succ;\pi \models \phi$ \\
+7. & $M, \pi \models g_1 \mathbf{U} g_2$ & $\Leftrightarrow$ & $\exists n \in \mathbb{N}. M,succ^n; \pi \models g_2 \wedge \forall m \in \mathbb{N}. m < n \to succ^m; \pi \models g_1$ \\
+8. & $M,\pi \models \mathbf{F} g_1$ & $\Leftrightarrow$ & $\exists n \in \mathbb{N}. M,succ^n;\pi \models g_1$ \\
+9. & $M,\pi \models \mathbf{G} g_1$ & $\Leftrightarrow$ & $\forall n \in \mathbb{N}. M, succ^n;\pi \models g_1$ 
+10. & $M,\pi \models g_1 \mathbf{R} g_2$ &\Leftrightarrow& & $\forall n,m \in \mathbb{N}. i < j \to M,succ^i; \pi \not\models g_1 \to  M,\succ^j \models g_2$ 
 \end{tabular}
 \end{center}
 
+where $succ$ is a successor function $succ: \mathbb{N} \_ \to \mathbb{N}$ such that $succ;\pi(n) = \pi(succ(n)) = \pi(n + 1)$.
 
 \end{mydef}
 In the above definition we have defined the semantics for the \textbf{U} and \textbf{X} LTL operations. 
